mysql-deploy-service.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        tier: database
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - containerPort: 3306
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql 
      volumes:
        - name: mysql-persistent-storage 
          persistentVolumeClaim:
            claimName: mysql-pv-claim

                    #   - name: MYSQL_DATABASE
                    #value: student
             #---
             #apiVersion: apps/v1
             #kind: Service
             #metadata:
             #name: mysql-service
             #spec:
             #selector:
             #app: mysql
             # ports:
             # - protocol: TCP
             # port: 3306
             #targetPort: 3306                                                                                                                                                                  2,1           Top
