student-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-manage-deployment
  labels:
    app: student-manage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-manage
  template:
    metadata:
      labels:
        app: student-manage
    spec:
      containers:
        - name: student-manage
          image: gcr.io/my-sample-project-382609/student-management
          ports:
            - containerPort: 8080
