student-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-management-service
spec:
  type: NodePort
  selector:
    app: student-manage
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 8080
      nodePort: 30100
